--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "build": "rm -rf dist && parcel build src/index.html --public-url ./"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.0.0-beta.2",
     "cssnano": "^4.1.10"
   },
   "dependencies": {
